@@ -1,6 +1,7 @@
 # CHANGES TO MTurkR 0.5 #
 
 ## SIGNIFICANT USER-VISIBLE CHANGES ##
+* The `return.hit.dataframe` argument to `GetHITsForQualificationType` has been removed.
 * Functions of the form `*ToDataFrame` have been replaced with `as.data.frame` S3 methods, which are handled by a global `as.data.frame.MTurkResponse` function. (#36)
 * `ParseErrorCodes` is removed (now used internally in `request`).
 * `options('MTurkR.print')` is deleted and replaced by `options('MTurkR.verbose')`. All functions will, temporarily, accept `print` arguments. All code should be updated to reflect the new terminology moving forward.
